# yjs-collaboration-server

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  README.md  README_zh.md  rustfmt.toml
idl/: collaboration.proto
src/: lib.rs
src/adapter/http/: mod.rs  router.rs
src/adapter/http/websocket/: ws_handler.rs
src/adapter/rpc/: collaboration_service.rs  mod.rs
src/adapter/websocket/: ws_handler.rs
src/application/: bootstrap.rs  config.rs  container.rs  mod.rs
src/application/servers/: http_server.rs  rpc_server.rs
src/application/services/: document_application_service.rs  mod.rs
src/application/use_cases/: document_use_cases.rs  mod.rs
src/domain/: factory.rs  mod.rs
src/domain/entities/: document.rs
src/domain/repositories/: document_repository.rs
src/domain/services/: document_service.rs
src/domain/value_objects/: message.rs
src/infrastructure/adapters/: in_memory_document_repository.rs  mod.rs
src/start/: server.rs
volo-gen/: volo.yml
yjs-collaboration-server-adapter/: Cargo.toml
yjs-collaboration-server-adapter/src/: lib.rs
yjs-collaboration-server-adapter/src/http/: mod.rs  router.rs
yjs-collaboration-server-adapter/src/http/websocket/: mod.rs  ws_handler.rs
yjs-collaboration-server-adapter/src/rpc/: collaboration_service.rs  mod.rs
yjs-collaboration-server-application/: Cargo.toml
yjs-collaboration-server-application/src/: bootstrap.rs  config.rs  container.rs  lib.rs
yjs-collaboration-server-application/src/servers/: http_server.rs  mod.rs  rpc_server.rs
yjs-collaboration-server-application/src/services/: document_application_service.rs  mod.rs
yjs-collaboration-server-bin/: Cargo.toml
yjs-collaboration-server-bin/src/lib/: server.rs
yjs-collaboration-server-common/: Cargo.toml
yjs-collaboration-server-common/idl/: collaboration.proto
yjs-collaboration-server-common/src/: lib.rs
yjs-collaboration-server-common/volo-gen/: Cargo.toml  volo.yml
yjs-collaboration-server-domain/: Cargo.toml
yjs-collaboration-server-domain/src/: lib.rs
yjs-collaboration-server-domain/src/entities/: document.rs  mod.rs
yjs-collaboration-server-domain/src/repositories/: document_repository.rs
yjs-collaboration-server-domain/src/services/: document_service.rs  mod.rs
yjs-collaboration-server-infrastructure/: Cargo.toml
yjs-collaboration-server-infrastructure/src/: lib.rs
yjs-collaboration-server-infrastructure/src/adapters/: in_memory_document_repository.rs  mod.rs
