[package]
name = "yjs-collaboration-server"
version = "0.1.0"
edition.workspace = true
description = "High-performance real-time collaborative document editing server built with Yjs CRDT and Volo HTTP"
license = "MIT"
authors = ["KingYen. 1696918097@qq.com"]
repository = "https://github.com/Wenrh2004/yjs-collaboration-server"
homepage = "https://github.com/Wenrh2004/yjs-collaboration-server"
documentation = "https://docs.rs/yjs-collaboration-server"
keywords = [
    "collaboration",
    "crdt",
    "yjs",
    "websocket",
    "volo",
    "rust",
    "volo",
    "volo-http",
]
categories = ["network-programming", "realtime", "asynchronous", "web-server"]

# Binary configurations
[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "volo-gen"]
resolver = "2"

[workspace.package]
edition = "2024"

[dependencies]
# HTTP & RPC framework
volo = { workspace = true }
volo-http = { workspace = true }
volo-grpc = { workspace = true }
volo-gen = { path = "volo-gen" }

# gRPC dependencies
pilota = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-build = { workspace = true }

# Asynchronous runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

# CRDT synchronization
yrs = "0.23.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5.1"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Utilities
once_cell = "1.19.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[workspace.dependencies]
volo = "*"
volo-http = { version = "*", features = ["full"] }
volo-grpc = "0.10.4"
volo-build = "0.10.4"
pilota = "*"
prost = "0.13"
prost-types = "0.13"
tonic = "0.13"
tonic-build = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3.31"
anyhow = "1.0"
futures = "0.3"
async-stream = "0.3"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
