[workspace]
members = [
    "yjs-collaboration-server-adapter",
    "yjs-collaboration-server-application",
    "yjs-collaboration-server-bin",
    "yjs-collaboration-server-domain",
    "yjs-collaboration-server-infrastructure",
    "yjs-collaboration-server-common",
]
resolver = "2"

# 将 bin 设置为默认运行目标
default-members = ["yjs-collaboration-server-bin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KingYen. 1696918097@qq.com"]
license = "MIT"
repository = "https://github.com/Wenrh2004/yjs-collaboration-server"
homepage = "https://github.com/Wenrh2004/yjs-collaboration-server"

[workspace.dependencies]
# 子包依赖
yjs-collaboration-server-adapter = { path = "yjs-collaboration-server-adapter" }
yjs-collaboration-server-application = { path = "yjs-collaboration-server-application" }
yjs-collaboration-server-domain = { path = "yjs-collaboration-server-domain" }
yjs-collaboration-server-infrastructure = { path = "yjs-collaboration-server-infrastructure" }
yjs-collaboration-server-common = { path = "yjs-collaboration-server-common" }

# HTTP & RPC framework
volo = "*"
volo-http = { version = "*", features = ["full"] }
volo-grpc = "0.10.4"
volo-build = "0.10.4"
pilota = "*"

# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
futures = "0.3"
async-stream = "0.3"

# CRDT synchronization
yrs = "0.23.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5.1"
serde_yaml = "0.9.32"

# Concurrent data structures
dashmap = "6.1.0"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Utilities
once_cell = "1.19.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
